recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:8: error: not found: value increment
    tree(steps-1,length-increment,angle,increment)
                        ^Tree:8: error: not found: value increment
    tree(steps-1,length-increment,angle,increment)
                                        ^Tree:11: error: not found: value increment
    tree(steps-1,length-increment,angle,increment)
                        ^Tree:11: error: not found: value increment
    tree(steps-1,length-increment,angle,increment)
                                        ^