recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if(steps == 0) {
    return
  }
  else {
    droite(angle)
    avance(length)
    tree(steps-1,length-increment,angle,increment)
    gauche(2*angle)
    avance(length)
    tree(steps-1,length-increment,angle,increment)
    recule(length)
  }
}